[package]
name = "hello-desktop"
version = "0.1.0"
authors = ["Victor Payno <vpayno@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
async-recursion = "1.1.1"
